# Aanya-Voice-Bot

./: .dockerignore  .gitignore  Dockerfile  README.md  dev_run.bat  docker-compose.yml  main.py  pyproject.toml  run-docker-dev.bat
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/core/: config.py
backend/frontend-old/: index.html
backend/services/: llm_service.py  stt_service.py  tts_service.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package.json  script.js  style.css  vite.config.ts
frontend/src/: App.tsx  main.scss  main.tsx
frontend/src/pages/home/: StreamingAudioPlayer.tsx  audioRecorder.ts  home.scss  home.ts  home.tsx
services/: llm_service.py  persona.py  stt_service.py  tts_service.py
